--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 
 <body class="bx--body p20">
   <!-- <img id="img" src="hand.jpg"/>  -->
-  <div class="p20">
+  <!-- <div class="p20">
     Handtrack.js allows you prototype handtracking interactions in the browser in 10 lines of code.
-  </div>
+  </div> -->
   <div class="mb10">
     <button onclick="toggleVideo()" id="trackbutton" class="bx--btn bx--btn--secondary" type="button">
       Toggle Video
